{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "e65e0611-a47c-4702-a3e0-c808ebca80df",
            "actions": [
                {
                    "name": "SpacePressed",
                    "type": "Button",
                    "id": "58823886-f3b4-44f2-bb43-39c7b111db81",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseDelta",
                    "type": "Value",
                    "id": "8d60c0cb-6e81-418c-9001-bb2f7244a086",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseHold",
                    "type": "Button",
                    "id": "0f07f70b-c839-478e-a8ae-7ed5c0151fd5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8110da98-c86a-43c7-88ff-97faa3c7685c",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpacePressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fb6c4072-4353-4b1d-bb82-f296ed4ad863",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e3db0a0e-2f8f-43bd-894c-6a40c153c844",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}